--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #333;
+    background-color: #252525;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -14,28 +14,35 @@ body {
     display: flex;
     justify-content: space-between;
     width: 400px;
-    margin-bottom: 10px;
+    margin-bottom: 5%;
     font-size: 1.1em;
 }
 
 .player-info.active {
     font-weight: bold;
-    color: #4CAF50; /* Verde para indicar el turno */
+    color: #eca46a; /* Verde para indicar el turno */
+}
+
+h1 {
+    color: rgb(255, 255, 255);
+}
+h2 {
+    color: rgb(255, 255, 255);
 }
 
 #chessBoard {
-    border: 3px solid #555;
+    border: 3px solid #876262;
 }
 
 .controls {
-    margin-top: 15px;
+    margin-top: 5%;
 }
 
 button {
     padding: 10px 15px;
     font-size: 1em;
     cursor: pointer;
-    background-color: #4CAF50;
+    background-color: #8b7372;
     color: white;
     border: none;
     border-radius: 5px;
@@ -43,5 +50,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #a1a1a1;
 }
