--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ button:hover {
     margin-bottom: 10px;
 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     flex-wrap: wrap;
 }
 
